# euthmonitoring

./: .env.example  BTC.csv  ETH.csv  chat_gpt_solution.py  config.py  euth_btc_trends.numbers  get_testingmodel_data.py  main.py  new_prices.csv  pyproject.toml
